test/variables/kbrady/ref-to-literal.good
ref-to-literal.chpl:1: error: Cannot set a reference to a param variable.
